--- a/src/main/resources/templates/client/enrollmented_course.html
+++ b/src/main/resources/templates/client/enrollmented_course.html
@@ -73,20 +73,45 @@
     <!-- Content -->
     <div class="container" style="margin-top: 100px; ">
         <h3 class="mb-3">Khóa học của tôi</h1>
-            <div class="container" style="margin-bottom: 100px;">
-                <div class="row justify-content-between">
-                    <div class="card mb-3" style="width: 18rem;" th:each="enrollment : ${enrollments}">
-                        <a href="" class="card-img-top" style="text-decoration: none;"><img src="..." class=""
-                                alt="..."></a>
-                        <div class="card-body">
-                            <a href="" style="text-decoration: none;" class="card-title">
-                                <h5 th:text="${enrollment.course.name}"></h5>
-                            </a></br>
-                            <p class="card-text">Thời gian đăng ký</p>
-                        </div>
+        <div class="container" style="margin-bottom: 100px;">
+            <div class="row justify-content-between">
+                <div class="card mb-3" style="width: 18rem;" th:each="enrollment : ${enrollments}">
+                    <a href="" class="card-img-top" style="text-decoration: none;"><img src="..." class=""
+                            alt="..."></a>
+                    <div class="card-body">
+                        <a href="" style="text-decoration: none;" class="card-title">
+                            <h5 th:text="${enrollment.course.name}"></h5>
+                        </a></br>
+                        <p class="card-text">Thời gian đăng ký</p>
                     </div>
                 </div>
             </div>
+        </div>
+        <div aria-label="Page navigation example" th:styleappend="${totalEnrollmentedCourses == 0 ? 'display: none;':'display: block;'}">
+            <ul class="pagination justify-content-center">
+                <li class="page-item">
+                    <a th:classappend="${currentPageEnrollmentedCourses == 1} ? 'disabled page-link' : 'page-link'"
+                        th:href="@{/enrollmented-course?(page=${currentPageEnrollmentedCourses - 1})}" 
+                        aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                    </a>
+                </li>
+                <li class="page-item" th:each="page : ${#numbers.sequence(1, totalEnrollmentedCourses)}"
+                    th:classappend="${page == currentPageEnrollmentedCourses} ? 'active':''">
+                    <a class="page-link" 
+                        th:href="@{/enrollmented-course?(page=${page})}"
+                        th:text="${page}">
+                    </a>
+                </li>
+                <li class="page-item">
+                    <a th:classappend="${currentPageEnrollmentedCourses == totalEnrollmentedCourses} ? 'disabled page-link' : 'page-link'" 
+                        th:href="@{/enrollmented-course?(page=${currentPageEnrollmentedCourses + 1})}" 
+                        aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
 
     <!-- Footer -->
